Fix invisible checkboard pattern if ancestor background set

--- a/gh-page/css/styles.css
+++ b/gh-page/css/styles.css
@@ -9,6 +9,7 @@ body,
 html {
     height: 100%;
     width: 100%;
+    background: white;
 }
 
 body header {
